[package]
name = "void-ship"
version = "0.1.0"
edition = "2021"
description = "A crate to remove access to vDSO and vvar"
repository = "https://github.com/insanitybit/void-ship"
documentation = "https://docs.rs/void-ship"
readme = "README.md"
keywords = ["security", "time", "side-channel", "linux", "vDSO"]
categories = ["operating-systems", "security-tools"]
license = "MIT"

[dependencies]
libc = "0.2.150"
thiserror = "1.0.50"

[features]
default = []
test-clock = []
