[package]
name = "void-ship"
version = "0.1.2"
edition = "2021"
description = "A crate to remove access to vDSO and vvar"
repository = "https://github.com/insanitybit/void-ship"
documentation = "https://docs.rs/void-ship"
readme = "README.md"
keywords = ["security", "time", "side-channel", "linux", "vDSO"]
categories = []
license = "MIT"

[dependencies]
libc = "0.2.150"

[features]
default = []
test-clock = []
